--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,19 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+
+@media (max-width:600px){
+    .lecture-item {
+        width: 100%;
+    }
+
+    header {
+        padding: 10px 0;
+    }
+    
+    header h1 {
+        text-align: center;
+        font-size: 1.5em;
+    }
+}
